# seulsegown

./: Dockerfile  README.md  crawler.py  cu_crawler.py  lat_lng.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
crawlers/: admin.py  cu.py  emart_24.py  gs25.py  kakao_api.py  ministop.py  models.py  seven_eleven.py  views.py
crawlers/migrations/: 0001_initial.py
docker/: entrypoint.sh  nginx.conf
seulsegown/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
store/management/commands/: crawl.py
store/migrations/: 0001_initial.py  0002_jumpo_brand.py  0003_alter_jumpo_latitude_alter_jumpo_longitude.py
store/static/css/: result.css  style.css
store/static/js/: app.js  script.js
store/templates/: base.html  result.html
store/templates/store/: error2.html  error_input_empty.html  error_invalid_address.html  error_no_service_area.html  index.html  result.html
utils/: test_utils.py  utils.py
