[tool.poetry]
name = "seulsegown"
version = "0.1.0"
description = ""
authors = ["An Nyeong <me@annyeong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
pylint = "^2.17.3"
autopep8 = "^2.0.2"
requests = "^2.30.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
